# curso-fastapi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
contas_a_pagar_e_receber/models/: __init__.py  conta_a_pagar_receber_model.py  fornecedor_cliente_model.py
contas_a_pagar_e_receber/routers/: contas_a_pagar_e_receber_router.py  fornecedor_cliente_router.py
shared/: database.py  exceptions_handler.py
test/contas_a_pagar_e_receber/routers/: test_contas_a_pagar_e_receber_router.py  test_integrado_contas_a_pagar_e_receber_router.py  test_integrado_fornecedor_cliente.py
