[tool.poetry]
name = "curso-fastapi"
version = "0.1.0"
description = ""
authors = ["Wesley Borges <djwesleyborges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
